# nds-openocd_adapters

./: .gitignore  .gitmodules  Makefile.am  Makefile.in  README.md  bootstrap  configure  configure.ac
WinUSB-Olimex-driver/: Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_(Interface_0).cat  Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_(Interface_0).cer  Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_(Interface_0).inf
aice/: Makefile.am  Makefile.in  aice_port.h  aice_usb.c  aice_usb.h  aice_usb_helper.h  aice_usb_patch.h  aice_usb_wrapper.c  config.h  libusb0_common.c  libusb1_common.c  log.c  log.h  nds32_edm.h  nds32_insn.h  nds32_reg.c  nds32_reg.h  time_support_common.c
aice_adapter/: Makefile  Makefile.am  Makefile.in  Makefile_single  adapter.c  adapter.h  aice_log.c  aice_log.h  aice_pipe_command.h  aice_print_info.c  aice_usb.c  aice_usb_command.c  aice_usb_command.h  aice_usb_pack_format.c  aice_usb_pack_format.h  build_libusb.sh  config.h  log.c  log.h  nds32_edm.h  nds32_insn.h  nds32_reg.c
aice_adapter/jtag/drivers/: libusb0_common.c  libusb0_common.h  libusb1_common.c  libusb1_common.h
aice_adapter/libusb-win32-bin-1.2.6.0/: install.sh  libusb.la  libusb.pc
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
burner_adapter/: Makefile.am  Makefile.in  burner_action.c  burner_action.h  burner_server.c  burner_socket.c  burner_socket.h
iceman_adapter/: 70-ndsusb-v1.rules  ICEman.sh  Makefile.am  Makefile.in  custom_lib.tcl  debug_diag.tcl  debug_util.tcl  dmi.tcl  example_custom.tcl  iceman_adapter.c  iceman_socket.c  iceman_socket.h  iceman_start.c  libusb10_common.h  nds32_tdesc_bitfield.xml  nds_custom_reset.tcl  nds_custom_reset_func.tcl  nds_diagnosis_funcs.tcl  nds_reg_read.tcl  nds_reg_write.tcl  ndsv5_tdesc_bitfield.xml  ndsv5_tdesc_bitfield_64.xml  openocd.cfg.rv32  openocd.cfg.rv64  openocd.cfg.tpl  openocd.cfg.v5  reset-hold-script.tpl
iceman_adapter/board/: nds32_xc5.cfg.tpl
iceman_adapter/interface/: aice-mini-plus.cfg  aice.cfg  aice_micro_sdp.cfg  aice_mini_plus_ftdi.cfg  aice_sdp.cfg  andes_ice_lists.json  bfc.cfg  jtagkey.cfg  jtagkey_sdp.cfg  kt-link.cfg  nds32-aice.cfg.tpl  olimex-arm-usb-tiny-h.cfg  olimex.cfg  virtual_dmi.cfg
libusb-AICE-driver/: AICE.cat  AICE.cer  AICE.inf  AICE_Olimex_WinUSB.cat  AICE_Olimex_WinUSB.cer  AICE_Olimex_WinUSB.inf  Andes_FTDI_USB_device.cat  Andes_FTDI_USB_device.cer  Andes_FTDI_USB_device.inf  FTDI_USB_device.cat  FTDI_USB_device.cer  FTDI_USB_device.inf  Olimex_FTDI_USB-TINY-H_USB_device.cat  Olimex_FTDI_USB-TINY-H_USB_device.cer  Olimex_FTDI_USB-TINY-H_USB_device.inf  Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_WinUSB.cat  Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_WinUSB.cer  Olimex_OpenOCD_JTAG_ARM-USB-TINY-H_WinUSB.inf
libusb-AICE-driver-xp/: AICE.cat  AICE.cer  AICE.inf  Andes_FTDI_USB_device.cat  Andes_FTDI_USB_device.cer  Andes_FTDI_USB_device.inf  FTDI_USB_device.cat  FTDI_USB_device.cer  FTDI_USB_device.inf  Olimex_FTDI_USB-TINY-H_USB_device.cat  Olimex_FTDI_USB-TINY-H_USB_device.cer  Olimex_FTDI_USB-TINY-H_USB_device.inf  Olimex_FTDI_USB-TINY-H_USB_device_interface_0.cat  Olimex_FTDI_USB-TINY-H_USB_device_interface_0.cer  Olimex_FTDI_USB-TINY-H_USB_device_interface_0.inf  Olimex_FTDI_USB-TINY-H_USB_device_interface_1.cat  Olimex_FTDI_USB-TINY-H_USB_device_interface_1.cer  Olimex_FTDI_USB-TINY-H_USB_device_interface_1.inf
libusb-AndeShape-AICE-driver/: AndeShape_AICE.cat  AndeShape_AICE.inf  AndeShape_CA.cer
